--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=tinh2003
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
