--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ spring.datasource.password=tinh2003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=trungtinhn300@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
